--- a/updates.html
+++ b/updates.html
@@ -4,8 +4,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Updates & News — TSD Myanmar</title>
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/updates.css">
+  <link rel="stylesheet" href="/css/main.css">
+  <link rel="manifest" href="/manifest.json">
+  <link rel="icon" id="site-favicon" href="/assets/images/logo/logo_en.svg" type="image/svg+xml">
+  <link rel="stylesheet" href="/css/updates.css">
     <script>
       (function(){
         try{
@@ -28,23 +30,21 @@
     <div id="header"></div>
 
     <main class="updates-page">
+      <!-- Hero -->
       <section class="updates-hero updates-layout">
-        <p class="eyebrow" data-i18n="updates_eyebrow">Transparency & Impact</p>
-        <h1 data-i18n="updates_title">Updates & News</h1>
-        <p class="lead" data-i18n="updates_subtitle">Recent activity, program progress, and transparency notes from Together for Sustainable Development. We publish concise, factual updates that explain what we did, why, and what comes next.</p>
+        <p class="eyebrow" data-i18n="updates_eyebrow">Transparency &amp; Impact</p>
+        <h1 data-i18n="updates_title">Updates &amp; News</h1>
+        <p class="lead" data-i18n="updates_subtitle">Recent activity, program progress, and transparency notes from TSD Myanmar.</p>
         <div class="hero-controls">
           <div class="search" aria-label="Search updates">
             <label for="updates-search" class="visually-hidden" data-i18n="search_placeholder">Search updates</label>
-            <input id="updates-search" type="search" placeholder="" aria-controls="updates-list" data-i18n-placeholder="search_placeholder" data-i18n-aria="search_placeholder">
-          </div>
-          <div class="hero-meta">
-            <span class="pill" data-i18n="updates_freq">Updated regularly</span>
-            <span class="pill" data-i18n="updates_team">Program & finance teams</span>
+            <input id="updates-search" type="search" placeholder="Search updates…" aria-controls="updates-list" data-i18n-placeholder="search_placeholder">
           </div>
         </div>
       </section>
 
-      <section class="updates-controls filter-bar updates-layout" aria-hidden="false">
+      <!-- Filters -->
+      <section class="filter-bar updates-layout" aria-label="Filter controls">
         <div class="filter-group">
           <label for="updates-year-filter" class="visually-hidden">Filter by year</label>
           <select id="updates-year-filter" aria-controls="updates-list">
@@ -59,34 +59,37 @@
           </select>
           <label for="updates-sort" class="visually-hidden">Sort</label>
           <select id="updates-sort" aria-controls="updates-list">
-            <option value="newest">Newest</option>
-            <option value="oldest">Oldest</option>
+            <option value="newest">Newest first</option>
+            <option value="oldest">Oldest first</option>
           </select>
         </div>
-        <div class="status" aria-live="polite" aria-atomic="true"><span id="updates-loading">Loading updates…</span></div>
+        <div class="status" aria-live="polite" aria-atomic="true"><span id="updates-loading"></span></div>
       </section>
 
+      <!-- Card grid -->
       <section class="updates-layout">
-        <section id="updates-list" class="updates-list" role="list" aria-label="Updates and news">
+        <div id="updates-list" class="updates-list" role="list" aria-label="Updates and news">
           <p class="visually-hidden" data-i18n="loading">Loading updates…</p>
-        </section>
+        </div>
       </section>
 
+      <!-- Load more -->
       <div class="updates-actions updates-layout" style="text-align:center; margin-bottom:2rem;">
-        <button id="updates-load-more" class="btn" data-i18n="load_more" aria-label="Load more updates">Load more</button>
-        <p style="margin-top:.5rem;"><a href="updates-archive.html">See archive</a></p>
+        <button id="updates-load-more" data-i18n="load_more" aria-label="Load more updates">Load more</button>
+        <p style="margin-top:.75rem;font-size:.9rem;"><a href="updates-archive.html" data-i18n="see_archive">See full archive →</a></p>
       </div>
     </main>
 
     <div id="footer"></div>
   </div>
 
-  <script src="js/core/theme.js"></script>
-  <script src="js/core/icon-theme.js"></script>
-  <script src="js/core/header.js"></script>
-  <script src="js/layout.js"></script>
-  <script src="js/core/i18n.js"></script>
-  <script src="js/core/news.js"></script>
-  <script src="js/pages/updates.js"></script>
+  <script src="/js/core/theme.js"></script>
+  <script src="/js/core/icon-theme.js"></script>
+  <script src="/js/core/header.js"></script>
+  <script src="/js/layout.js"></script>
+  <script src="/js/core/i18n.js"></script>
+  <script src="/js/core/news.js"></script>
+  <script src="/js/pages/updates.js"></script>
+  <script src="/js/sw-register.js"></script>
 </body>
 </html>
