--- a/404.html
+++ b/404.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>404 — Not Found</title>
   <link rel="stylesheet" href="css/main.css">
+  <link rel="manifest" href="/manifest.json">
 </head>
 <body>
   <main style="max-width:40rem;margin:3rem auto;padding:1rem;text-align:center;">
@@ -12,5 +13,6 @@
     <p>Sorry, the page you requested cannot be found.</p>
     <p><a href="/">Return home</a></p>
   </main>
+  <script src="/js/sw-register.js"></script>
 </body>
 </html>
