--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>About TSD Myanmar</title>
   <link rel="stylesheet" href="css/main.css">
+  <link rel="manifest" href="/manifest.json">
   <script>
     (function(){
       try{
@@ -278,6 +279,7 @@
   <script src="js/core/header.js"></script>
   <script src="js/core/i18n.js"></script>
   <script src="js/main.js"></script>
+  <script src="/js/sw-register.js"></script>
 </body>
 </html>
 
