--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -1,12 +1,186 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Admin News Dashboard</title>
+  <title>TSD News Dashboard</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+  <!-- Quill.js WYSIWYG editor -->
+  <link href="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.snow.css" rel="stylesheet" />
 </head>
 <body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
+
+  <!-- ── Toast container ── -->
+  <div id="toast-container" class="toast-container"></div>
+
+  <div class="app-shell">
+
+    <!-- ── Header ── -->
+    <header class="app-header">
+      <div>
+        <h1>News Dashboard</h1>
+        <p class="muted">Manage articles across 3 languages &mdash; Protected by Cloudflare Access</p>
+      </div>
+      <button class="primary" id="btn-new" type="button">
+        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><line x1="12" y1="5" x2="12" y2="19"/><line x1="5" y1="12" x2="19" y2="12"/></svg>
+        New Article
+      </button>
+    </header>
+
+    <!-- ── Stat cards ── -->
+    <div class="stat-cards" id="stat-cards">
+      <div class="stat-card" style="border-top-color:#60a5fa"><span class="stat-value" id="stat-total">0</span><span class="stat-label">Total</span></div>
+      <div class="stat-card" style="border-top-color:#22c55e"><span class="stat-value" id="stat-published">0</span><span class="stat-label">Published</span></div>
+      <div class="stat-card" style="border-top-color:#f59e0b"><span class="stat-value" id="stat-draft">0</span><span class="stat-label">Drafts</span></div>
+      <div class="stat-card" style="border-top-color:#6b7280"><span class="stat-value" id="stat-archived">0</span><span class="stat-label">Archived</span></div>
+    </div>
+
+    <!-- ── Filter bar ── -->
+    <form class="filter-bar card" id="filter-form">
+      <input type="text" id="filter-search" placeholder="Search title or content…" class="filter-search" />
+      <select id="filter-status">
+        <option value="">All Status</option>
+        <option value="draft">Draft</option>
+        <option value="published">Published</option>
+        <option value="archived">Archived</option>
+      </select>
+      <select id="filter-category">
+        <option value="">All Categories</option>
+        <option value="news">News</option>
+        <option value="report">Report</option>
+        <option value="announcement">Announcement</option>
+        <option value="health">Health</option>
+        <option value="education">Education</option>
+        <option value="water">Water &amp; Sanitation</option>
+        <option value="volunteer">Volunteers</option>
+      </select>
+      <button type="submit" class="primary compact">Filter</button>
+      <button type="button" class="ghost compact" id="btn-reset">Reset</button>
+    </form>
+
+    <!-- ── Table / empty / loading ── -->
+    <div id="table-area">
+      <div class="loading-state"><div class="spinner"></div><span>Loading…</span></div>
+    </div>
+
+    <!-- ── Pagination ── -->
+    <div class="pagination" id="pagination" style="display:none">
+      <span class="muted" id="page-info"></span>
+      <div class="page-btns">
+        <button class="ghost compact" id="btn-prev" disabled>&#8592; Prev</button>
+        <button class="ghost compact" id="btn-next" disabled>Next &#8594;</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- ══════════════════════════════════════════════
+       MODAL — Create / Edit form
+       ══════════════════════════════════════════════ -->
+  <div class="modal-backdrop" id="modal-backdrop" role="dialog" aria-modal="true" style="display:none">
+    <div class="modal">
+      <form class="news-form" id="news-form">
+        <!-- Header -->
+        <div class="form-header">
+          <h3 id="form-title">Create Article</h3>
+          <button type="button" class="btn-icon" id="btn-modal-close" aria-label="Close">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="18" y1="6" x2="6" y2="18"/><line x1="6" y1="6" x2="18" y2="18"/></svg>
+          </button>
+        </div>
+
+        <!-- Language tabs -->
+        <div class="lang-tabs" id="lang-tabs">
+          <button type="button" class="lang-tab active" data-lang="en">English</button>
+          <button type="button" class="lang-tab" data-lang="mrh">Mara <span class="tab-dot" id="dot-mrh" title="Not translated"></span></button>
+          <button type="button" class="lang-tab" data-lang="my">Burmese <span class="tab-dot" id="dot-my" title="Not translated"></span></button>
+        </div>
+
+        <!-- Title -->
+        <div class="field">
+          <label>Title <span class="lang-badge" id="badge-title">EN</span></label>
+          <input id="inp-title" placeholder="Article title (required)" />
+        </div>
+
+        <!-- Summary -->
+        <div class="field">
+          <label>Summary <span class="lang-badge" id="badge-summary">EN</span></label>
+          <textarea id="inp-summary" rows="2" placeholder="Short excerpt shown in cards"></textarea>
+        </div>
+
+        <!-- Body (WYSIWYG) -->
+        <div class="field">
+          <label>Content <span class="lang-badge" id="badge-body">EN</span></label>
+          <div id="editor-container"></div>
+        </div>
+
+        <!-- Metadata grid -->
+        <div class="form-grid">
+          <div class="field">
+            <label>Slug</label>
+            <div class="input-group">
+              <input id="inp-slug" placeholder="my-article" required />
+              <button type="button" class="btn-mini" id="btn-auto-slug">Auto</button>
+            </div>
+          </div>
+          <div class="field">
+            <label>Author</label>
+            <input id="inp-author" placeholder="TSD Comms" required />
+          </div>
+          <div class="field">
+            <label>Category</label>
+            <select id="inp-category">
+              <option value="">Select category</option>
+              <option value="news">News</option>
+              <option value="report">Report</option>
+              <option value="announcement">Announcement</option>
+              <option value="health">Health</option>
+              <option value="education">Education</option>
+              <option value="water">Water &amp; Sanitation</option>
+              <option value="volunteer">Volunteers</option>
+            </select>
+          </div>
+          <div class="field">
+            <label>Status</label>
+            <select id="inp-status">
+              <option value="draft">Draft</option>
+              <option value="published">Published</option>
+              <option value="archived">Archived</option>
+            </select>
+          </div>
+          <div class="field">
+            <label>Publish Date</label>
+            <input type="date" id="inp-date" required />
+          </div>
+          <div class="field">
+            <label>Tags (comma separated)</label>
+            <input id="inp-tags" placeholder="health, outreach" />
+          </div>
+        </div>
+
+        <!-- Featured image -->
+        <div class="field">
+          <label>Featured Image URL</label>
+          <input id="inp-image" placeholder="https://…" />
+          <div class="image-preview" id="image-preview" style="display:none">
+            <img id="image-preview-img" alt="Preview" />
+          </div>
+        </div>
+
+        <!-- Error -->
+        <p class="form-error" id="form-error" style="display:none"></p>
+
+        <!-- Actions -->
+        <div class="form-actions">
+          <button type="button" class="ghost" id="btn-cancel">Cancel</button>
+          <button type="submit" class="primary" id="btn-submit">Create</button>
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
