--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Contact - TSD Myanmar</title>
   <link rel="stylesheet" href="css/main.css">
+  <link rel="manifest" href="/manifest.json">
   <script>
     (function(){
       try{
@@ -77,7 +78,7 @@
         <div class="lang-wrap">
           <label for="site-lang-select" class="visually-hidden">Language</label>
           <select id="site-lang-select" class="lang-select" aria-label="Language">
-            <option value="mara">Mara</option>
+            <option value="mrh">Mara</option>
             <option value="en">English</option>
             <option value="my">Burmese</option>
           </select>
@@ -264,6 +265,7 @@
   <script src="js/core/header.js"></script>
   <script src="js/core/i18n.js"></script>
   <script src="js/main.js"></script>
+  <script src="/js/sw-register.js"></script>
 </body>
 </html>
 
