--- a/get-involved.html
+++ b/get-involved.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Get Involved - TSD Myanmar</title>
   <link rel="stylesheet" href="css/main.css">
+  <link rel="manifest" href="/manifest.json">
   <script>
     (function(){
       try{
@@ -79,6 +80,7 @@
           <select id="site-lang-select" class="lang-select" aria-label="Language">
             <option value="en">English</option>
             <option value="mrh">Mara</option>
+            <option value="my">Burmese</option>
           </select>
         </div>
         <div class="theme-wrap">
@@ -281,6 +283,7 @@
   <script src="js/core/header.js"></script>
   <script src="js/core/i18n.js"></script>
   <script src="js/main.js"></script>
+  <script src="/js/sw-register.js"></script>
 </body>
 </html>
 
