--- a/updates-archive.html
+++ b/updates-archive.html
@@ -4,8 +4,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Updates Archive — TSD Myanmar</title>
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/updates.css">
+  <link rel="stylesheet" href="/css/main.css">
+  <link rel="manifest" href="/manifest.json">
+  <link rel="icon" id="site-favicon" href="/assets/images/logo/logo_en.svg" type="image/svg+xml">
+  <link rel="stylesheet" href="/css/updates.css">
   <script>
     (function(){
       try{
@@ -71,13 +73,14 @@
     <div id="footer"></div>
   </div>
 
-  <script src="js/core/theme.js"></script>
-  <script src="js/core/icon-theme.js"></script>
-  <script src="js/core/header.js"></script>
-  <script src="js/layout.js"></script>
-  <script src="js/core/i18n.js"></script>
-  <script src="js/core/news.js"></script>
-  <script src="js/pages/updates-archive.js"></script>
+  <script src="/js/core/theme.js"></script>
+  <script src="/js/core/icon-theme.js"></script>
+  <script src="/js/core/header.js"></script>
+  <script src="/js/layout.js"></script>
+  <script src="/js/core/i18n.js"></script>
+  <script src="/js/core/news.js"></script>
+  <script src="/js/pages/updates-archive.js"></script>
+  <script src="/js/sw-register.js"></script>
 </body>
 </html>
 
