--- a/updates/updates.html
+++ b/updates/updates.html
@@ -4,8 +4,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Updates & News — TSD Myanmar</title>
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/updates.css">
+  <link rel="stylesheet" href="/css/main.css">
+  <link rel="manifest" href="/manifest.json">
+  <link rel="icon" id="site-favicon" href="/assets/images/logo/logo_en.svg" type="image/svg+xml">
+  <link rel="stylesheet" href="/css/updates.css">
     <script>
       (function(){
         try{
