fix: public site now fetches news from D1 API instead of stale static JSON\n\n- Add news.js to homepage so tsdNews helper is available\n- main.js preview: use API directly as fallback, handle i18n title/summary objects\n- Remove hardcoded /news/en/index.json fallback from homepage

--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
   <script src="js/components/testimonials.js" defer></script>
   <script src="js/components/hero-motto.js" defer></script>
   <script src="js/components/footer-nav.js" defer></script>
+  <script src="js/core/news.js"></script>
   <script src="js/main.js"></script>
   <script src="/js/sw-register.js"></script>
 </body>
