Updated I18N files and main JavaScript files to reflect recent changes in the project. This includes updates to the English, Marathi, and Burmese language files, as well as modifications to the index.html and core JavaScript files to ensure proper functionality and localization support. These changes are crucial for maintaining the integrity of the project and enhancing user experience across different languages.

--- a/index.html
+++ b/index.html
@@ -42,23 +42,23 @@
 
         <div class="stats" aria-hidden="false">
           <div class="stat">
-            <div class="num" data-count="2870">0</div>
+            <div class="num" data-count="2870" data-i18n-num="stats_students_num">0</div>
             <div class="label" data-i18n="stats_students">Students benefiting from improved education</div>
           </div>
           <div class="stat">
-            <div class="num" data-count="253">0</div>
+            <div class="num" data-count="253" data-i18n-num="stats_farmers_num">0</div>
             <div class="label" data-i18n="stats_farmers">Farmers pioneering sustainable farming methods</div>
           </div>
           <div class="stat">
-            <div class="num" data-count="3000">0</div><span class="num-suffix">+</span>
+            <div class="num" data-count="3000" data-i18n-num="stats_people_relief_num">0</div><span class="num-suffix" data-i18n="stats_people_relief_suffix">+</span>
             <div class="label" data-i18n="stats_people_relief">People provided with relief items during disasters</div>
           </div>
           <div class="stat">
-            <div class="num" data-count="750">0</div>
+            <div class="num" data-count="750" data-i18n-num="stats_women_shg_num">0</div>
             <div class="label" data-i18n="stats_women_shg">Women participating in Self-Help Groups</div>
           </div>
           <div class="stat">
-            <div class="num" data-count="13">0</div>
+            <div class="num" data-count="13" data-i18n-num="stats_communities_disaster_num">0</div>
             <div class="label" data-i18n="stats_communities_disaster">Communities with disaster committees &amp; better prepared for crises</div>
           </div>
         </div>
